Agregando la seccion de cerrar sesion

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
               </svg>
             <p class="text-white">Actividades</p>              
            </div> <!--Final se seccion de actividades-->
+           <div id="section-exit" class="flex items-center space-x-2 cursor-pointer h-14 p-5 hover:bg-red-500 ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 dark:text-white">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15M12 9l-3 3m0 0 3 3m-3-3h12.75" />
+              </svg>        
+            <p class="text-white">Salir</p>
+           </div>
         </div>
     </nav> <!--Final de la Barra de navegacion-->
 
@@ -142,7 +148,7 @@
             <h1 class="text-2xl text-center mt-5">Horario</h1>     
             <div id="timetable-teacher" class="mt-5 gap-1 grid grid-cols-7 max-w-screen-lg mx-auto bg-white border-4 border-white text-center text-white font-bold" style="grid-template-rows: repeat(15, 1fr)">
                 <span class="bg-blue-400">Hora</span><span class="bg-blue-400">Lunes</span><span class="bg-blue-400">Martes</span><span class="bg-blue-400">Miercoles</span><span class="bg-blue-400">Jueves</span><span class="bg-blue-400">Viernes</span><span class="bg-blue-400">Sabado</span>
-                <span class="row-start-2 bg-blue-400">7:00 - 7:45</span><span class="row-start-3 bg-blue-400">7:45 - 8:30</span><span class="row-start-4 bg-blue-400">8:30 - 9:15</span><span class="row-start-5 bg-blue-400">9:15 - 10:00</span><span class="row-start-6 bg-blue-400">10:00 - 10:45</span><span class="row-start-7 bg-blue-400">10:45 - 11:30</span><span class="row-start-8 bg-blue-400"> 11:30 - 12:15</span><span class="row-start-9 bg-blue-400">12:15 - 13:00</span><span class="row-start-10 bg-blue-400">13:00 - 13:45</span><span class="row-start-11 bg-blue-400">13:45 - 14:30</span><span class="row-start-12 bg-blue-400">14:30 - 15:15</span><span class="row-start-13 bg-blue-400">15:15 - 16:00</span><span class="row-start-14 bg-blue-400">16:00 - 16:45</span><span style="grid-row-start: 15; background-color: rgb(96 165 250);">16:45 - 17:30</span><span class="row-start-2 col-start-2 bg-gray-200"></span><span class="row-start-2 col-start-3 bg-gray-200"></span><span class="row-start-2 col-start-4 bg-gray-200"></span><span class="row-start-2 col-start-5 bg-gray-200"></span><span class="row-start-2 col-start-6 bg-gray-200"></span><span class="row-start-2 col-start-7 bg-gray-200"></span><span class="row-start-3 col-start-2 bg-gray-200"></span><span class="row-start-3 col-start-3 bg-gray-200"></span><span class="row-start-3 col-start-4 bg-gray-200"></span><span class="row-start-3 col-start-5 bg-gray-200"></span><span class="row-start-3 col-start-6 bg-gray-200"></span><span class="row-start-3 col-start-7 bg-gray-200"></span><span class="row-start-4 col-start-2 bg-gray-200"></span><span class="row-start-4 col-start-3 bg-gray-200"></span><span class="row-start-4 col-start-4 bg-gray-200"></span><span class="row-start-4 col-start-5 bg-gray-200"></span><span class="row-start-4 col-start-6 bg-gray-200"></span><span class="row-start-4 col-start-7 bg-gray-200"></span><span class="row-start-5 col-start-2 bg-gray-200"></span><span class="row-start-5 col-start-3 bg-gray-200"></span><span class="row-start-5 col-start-4 bg-gray-200"></span><span class="row-start-5 col-start-5 bg-gray-200"></span><span class="row-start-5 col-start-6 bg-gray-200"></span><span class="row-start-5 col-start-7 bg-gray-200"></span><span class="row-start-6 col-start-2 bg-gray-200"></span><span class="row-start-6 col-start-3 bg-gray-200"></span><span class="row-start-6 col-start-4 bg-gray-200"></span><span class="row-start-6 col-start-5 bg-gray-200"></span><span class="row-start-6 col-start-6 bg-gray-200"></span><span class="row-start-6 col-start-7 bg-gray-200"></span><span class="row-start-7 col-start-2 bg-gray-200"></span><span class="row-start-7 col-start-3 bg-gray-200"></span><span class="row-start-7 col-start-4 bg-gray-200"></span><span class="row-start-7 col-start-5 bg-gray-200"></span><span class="row-start-7 col-start-6 bg-gray-200"></span><span class="row-start-7 col-start-7 bg-gray-200"></span><span class="row-start-8 col-start-2 bg-gray-200"></span><span class="row-start-8 col-start-3 bg-gray-200"></span><span class="row-start-8 col-start-4 bg-gray-200"></span><span class="row-start-8 col-start-5 bg-gray-200"></span><span class="row-start-8 col-start-6 bg-gray-200"></span><span class="row-start-8 col-start-7 bg-gray-200"></span><span class="row-start-9 col-start-2 bg-gray-200"></span><span class="row-start-9 col-start-3 bg-gray-200"></span><span class="row-start-9 col-start-4 bg-gray-200"></span><span class="row-start-9 col-start-5 bg-gray-200"></span><span class="row-start-9 col-start-6 bg-gray-200"></span><span class="row-start-9 col-start-7 bg-gray-200"></span><span class="row-start-10 col-start-2 bg-gray-200"></span><span class="row-start-10 col-start-3 bg-gray-200"></span><span class="row-start-10 col-start-4 bg-gray-200"></span><span class="row-start-10 col-start-5 bg-gray-200"></span><span class="row-start-10 col-start-6 bg-gray-200"></span><span class="row-start-10 col-start-7 bg-gray-200"></span><span class="row-start-11 col-start-2 bg-gray-200"></span><span class="row-start-11 col-start-3 bg-gray-200"></span><span class="row-start-11 col-start-4 bg-gray-200"></span><span class="row-start-11 col-start-5 bg-gray-200"></span><span class="row-start-11 col-start-6 bg-gray-200"></span><span class="row-start-11 col-start-7 bg-gray-200"></span><span class="row-start-12 col-start-2 bg-gray-200"></span><span class="row-start-12 col-start-3 bg-gray-200"></span><span class="row-start-12 col-start-4 bg-gray-200"></span><span class="row-start-12 col-start-5 bg-gray-200"></span><span class="row-start-12 col-start-6 bg-gray-200"></span><span class="row-start-12 col-start-7 bg-gray-200"></span><span class="row-start-13 col-start-2 bg-gray-200"></span><span class="row-start-13 col-start-3 bg-gray-200"></span><span class="row-start-13 col-start-4 bg-gray-200"></span><span class="row-start-13 col-start-5 bg-gray-200"></span><span class="row-start-13 col-start-6 bg-gray-200"></span><span class="row-start-13 col-start-7 bg-gray-200"></span><span class="row-start-14 col-start-2 bg-gray-200"></span><span class="row-start-14 col-start-3 bg-gray-200"></span><span class="row-start-14 col-start-4 bg-gray-200"></span><span class="row-start-14 col-start-5 bg-gray-200"></span><span class="row-start-14 col-start-6 bg-gray-200"></span><span class="row-start-14 col-start-7 bg-gray-200"></span><span class="row-start-15 col-start-2 bg-gray-200"></span><span class="row-start-15 col-start-3 bg-gray-200"></span><span class="row-start-15 col-start-4 bg-gray-200"></span><span class="row-start-15 col-start-5 bg-gray-200"></span><span class="row-start-15 col-start-6 bg-gray-200"></span><span class="row-start-15 col-start-7 bg-gray-200"></span>
+                <span class="row-start-2 bg-blue-400">7:00 - 7:45</span><span class="row-start-3 bg-blue-400">7:45 - 8:30</span><span class="row-start-4 bg-blue-400">8:30 - 9:15</span><span class="row-start-5 bg-blue-400">9:15 - 10:00</span><span class="row-start-6 bg-blue-400">10:00 - 10:45</span><span class="row-start-7 bg-blue-400">10:45 - 11:30</span><span class="row-start-8 bg-blue-400"> 11:30 - 12:15</span><span class="row-start-9 bg-blue-400">12:15 - 13:00</span><span class="row-start-10 bg-blue-400">13:00 - 13:45</span><span class="row-start-11 bg-blue-400">13:45 - 14:30</span><span class="row-start-12 bg-blue-400">14:30 - 15:15</span><span class="row-start-13 bg-blue-400">15:15 - 16:00</span><span class="row-start-14 bg-blue-400">16:00 - 16:45</span><span style="grid-row-start: 15; background-color: rgb(96 165 250);">16:45 - 17:30</span><span class="row-start-2 col-start-2 bg-gray-200"></span><span class="row-start-2 col-start-3 bg-gray-200"></span><span class="row-start-2 col-start-4 bg-gray-200"></span><span class="row-start-2 col-start-5 bg-gray-200"></span><span class="row-start-2 col-start-6 bg-gray-200"></span><span class="row-start-2 col-start-7 bg-gray-200"></span><span class="row-start-3 col-start-2 bg-gray-200"></span><span class="row-start-3 col-start-3 bg-gray-200"></span><span class="row-start-3 col-start-4 bg-gray-200"></span><span class="row-start-3 col-start-5 bg-gray-200"></span><span class="row-start-3 col-start-6 bg-gray-200"></span><span class="row-start-3 col-start-7 bg-gray-200"></span><span class="row-start-4 col-start-2 bg-gray-200"></span><span class="row-start-4 col-start-3 bg-gray-200"></span><span class="row-start-4 col-start-4 bg-gray-200"></span><span class="row-start-4 col-start-5 bg-gray-200"></span><span class="row-start-4 col-start-6 bg-gray-200"></span><span class="row-start-4 col-start-7 bg-gray-200"></span><span class="row-start-5 col-start-2 bg-gray-200"></span><span class="row-start-5 col-start-3 bg-gray-200"></span><span class="row-start-5 col-start-4 bg-gray-200"></span><span class="row-start-5 col-start-5 bg-gray-200"></span><span class="row-start-5 col-start-6 bg-gray-200"></span><span class="row-start-5 col-start-7 bg-gray-200"></span><span class="row-start-6 col-start-2 bg-gray-200"></span><span class="row-start-6 col-start-3 bg-gray-200"></span><span class="row-start-6 col-start-4 bg-gray-200"></span><span class="row-start-6 col-start-5 bg-gray-200"></span><span class="row-start-6 col-start-6 bg-gray-200"></span><span class="row-start-6 col-start-7 bg-gray-200"></span><span class="row-start-7 col-start-2 bg-gray-200"></span><span class="row-start-7 col-start-3 bg-gray-200"></span><span class="row-start-7 col-start-4 bg-gray-200"></span><span class="row-start-7 col-start-5 bg-gray-200"></span><span class="row-start-7 col-start-6 bg-gray-200"></span><span class="row-start-7 col-start-7 bg-gray-200"></span><span class="row-start-8 col-start-2 bg-gray-200"></span><span class="row-start-8 col-start-3 bg-gray-200"></span><span class="row-start-8 col-start-4 bg-gray-200"></span><span class="row-start-8 col-start-5 bg-gray-200"></span><span class="row-start-8 col-start-6 bg-gray-200"></span><span class="row-start-8 col-start-7 bg-gray-200"></span><span class="row-start-9 col-start-2 bg-gray-200"></span><span class="row-start-9 col-start-3 bg-gray-200"></span><span class="row-start-9 col-start-4 bg-gray-200"></span><span class="row-start-9 col-start-5 bg-gray-200"></span><span class="row-start-9 col-start-6 bg-gray-200"></span><span class="row-start-9 col-start-7 bg-gray-200"></span><span class="row-start-10 col-start-2 bg-gray-200"></span><span class="row-start-10 col-start-3 bg-gray-200"></span><span class="row-start-10 col-start-4 bg-gray-200"></span><span class="row-start-10 col-start-5 bg-gray-200"></span><span class="row-start-10 col-start-6 bg-gray-200"></span><span class="row-start-10 col-start-7 bg-gray-200"></span><span class="row-start-11 col-start-2 bg-gray-200"></span><span class="row-start-11 col-start-3 bg-gray-200"></span><span class="row-start-11 col-start-4 bg-gray-200"></span><span class="row-start-11 col-start-5 bg-gray-200"></span><span class="row-start-11 col-start-6 bg-gray-200"></span><span class="row-start-11 col-start-7 bg-gray-200"></span><span class="row-start-12 col-start-2 bg-gray-200"></span><span class="row-start-12 col-start-3 bg-gray-200"></span><span class="row-start-12 col-start-4 bg-gray-200"></span><span class="row-start-12 col-start-5 bg-gray-200"></span><span class="row-start-12 col-start-6 bg-gray-200"></span><span class="row-start-12 col-start-7 bg-gray-200"></span><span class="row-start-13 col-start-2 bg-gray-200"></span><span class="row-start-13 col-start-3 bg-gray-200"></span><span class="row--start-13 col-start-4 bg-gray-200"></span><span class="row-start-13 col-start-5 bg-gray-200"></span><span class="row-start-13 col-start-6 bg-gray-200"></span><span class="row-start-13 col-start-7 bg-gray-200"></span><span class="row-start-14 col-start-2 bg-gray-200"></span><span class="row-start-14 col-start-3 bg-gray-200"></span><span class="row-start-14 col-start-4 bg-gray-200"></span><span class="row-start-14 col-start-5 bg-gray-200"></span><span class="row-start-14 col-start-6 bg-gray-200"></span><span class="row-start-14 col-start-7 bg-gray-200"></span><span class="row-start-15 col-start-2 bg-gray-200"></span><span class="row-start-15 col-start-3 bg-gray-200"></span><span class="row-start-15 col-start-4 bg-gray-200"></span><span class="row-start-15 col-start-5 bg-gray-200"></span><span class="row-start-15 col-start-6 bg-gray-200"></span><span class="row-start-15 col-start-7 bg-gray-200"></span>
                 <div id="add-activitie" > <p>4to Semestre</p> <button id="button-add-activitie" class="bg-gray-400 hover:bg-gray-500 p-1 rounded-lg text-xs">Agregar actividad</button></div>       
             </div> 
             <dialog id="modal-activitie" class="w-96 h-96 rounded-lg p-7">
@@ -157,6 +163,17 @@
         </div> <!--Final actividades profesor-->
 
       </section> <!--Final de seccion de profesor-->
+      <section>
+
+        <dialog id="box-exit" class="w-96 h-36 rounded-lg text-center p-5">
+            <h1 class="text-xl mb-5">¿Estas seguro que desea cerrar sesión?</h1>
+            <form method="dialog" class="flex justify-around">
+                <button id="exit" class="bg-gray-400 text-red-500 hover:bg-red-400 hover:text-white hover:border-red-400 border-2 font-bold rounded-lg px-4 py-1">Si</button>
+                <button class="bg-gray-400 text-green-300 hover:bg-green-300 hover:text-white font-bold rounded-lg px-3 py-1 ">No</button>
+            </form>
+        </dialog>
+
+      </section>
     </main>
 </section>
 
@@ -166,7 +183,7 @@
                 <h1 class="text-center text-blue-500 border-b-2 border-blue-400 text-3xl hover:text-blue-400 font-bold mb-7">Bienvenido</h1>
                 <form class="flex flex-col space-y-10" onsubmit= "return false">
                     <div class="flex justify-around">                      
-                    <label class="bg-blue-600 cursor-pointer rounded-md px-2 py-1 text-white select-none shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/70">Estudiante <input type="radio" name="userType" value="student" class="cursor-pointer"></label>
+                    <label class="bg-blue-600 cursor-pointer rounded-md px-2 py-1 text-white select-none shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/70">Estudiante<input type="radio" name="userType" value="student" class="cursor-pointer"></label>
                     <label class="bg-blue-600 cursor-pointer rounded-md px-2 py-1 text-white select-none shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/70">Profesor <input type="radio" name="userType" value="teacher" class="cursor-pointer"></label>
                     <label class="bg-blue-600 cursor-pointer rounded-md px-2 py-1 text-white select-none shadow-blue-500/20 transition-all hover:shadow-lg hover:shadow-blue-500/70">Administrador <input type="radio" name="userType" value="administrator" class="cursor-pointer"></label>
                     </div>
@@ -177,8 +194,8 @@
             </div>
         
              <div class="col-span-5 p-5 font-bold">
-                <h1 class="text-3xl text-center text-cyan-500 mb-7 hover:text-cyan-300 transition duration-500 ease-in-out transform hover:-translate-y-2 hover:scale-110">"Dashboard Informático"</h1>
-                <p class="text-gray-600 hover:text-gray-400 text-center text-xl transition duration-500 ease-in-out transform hover:-translate-y-1 mb-5">La plataforma digital para la cómoda visualización de información y actividades de la UNEFA</p>
+                <h1 class="text-3xl text-center text-cyan-500 mb-7 hover:text-cyan-300 transition duration-500 ease-in-out transform hover:-translate-y-2 hover:scale-110 select-none">"Dashboard Informático"</h1>
+                <p class="text-gray-600 hover:text-gray-400 text-center text-xl transition duration-500 ease-in-out transform hover:-translate-y-1 mb-5 select-none">La plataforma digital para la cómoda visualización de información y actividades de la UNEFA</p>
                 <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/ffc59456-c0fb-490a-bbbb-a9fa3a44c729/dazeipu-528696b3-a57d-4172-b0f0-2ed785100add.png" style="height: 300px; width: 300px; margin: auto;">
             </div>
         </div>
@@ -197,14 +214,20 @@ alumns = [
     {
         name: "Miguel",
         lastname: "Petit",
-        cedula: 28767977,
-        password: "latuya",
+        cedula: 6,
+        password: "6",
     },
     {
         name: "Jhon",
         lastname: "Molina",
-        cedula: 28777846,
-        password: "laprimatuya",
+        cedula: 9,
+        password: "9",
+    },
+    {
+        name: "Roger",
+        lastname: "Morillo",
+        cedula: 8,
+        password: "8",
     },
 ]
 
@@ -257,6 +280,7 @@ function validateDate() {
     for(let i = 0; i < userType.length; i++) { // Definiendo que tipo de usuario escogio el usuario
         if(userType[i].checked) { // Verifica cual tipo de usuario se selecciono
             userType = userType[i].value; // Guarda el tipo de usuario seleccionado
+            console.log(userType);
             break;
         }
     }
@@ -269,6 +293,7 @@ function validateDate() {
         for (let i = 0; i < alumns.length; i++) {
             if(IdentityCard == alumns[i].cedula){
                 getAlumn = alumns[i];
+                console.log(getAlumn)
                 break;           
             }
         }
@@ -280,8 +305,8 @@ function validateDate() {
         } else {  
             alert("Bienvenido!!");
             document.getElementById('login').style.display = 'none';  
-            document.getElementById('barra-de-navegacion').style.display = 'block' 
-            document.getElementById('barra-secundaria').className = 'block flex bg-white p-4 justify-end sticky top-0'
+            document.getElementById('barra-de-navegacion').style.display = 'block';
+            document.getElementById('barra-secundaria').className = 'block flex bg-white p-4 justify-end sticky top-0';
             document.getElementById('username').innerHTML = `${getAlumn.name} ${getAlumn.lastname}`;
             document.getElementById('start-section-student').className = "block";
             document.getElementById('section-start').className= "bg-blue-400 flex items-center space-x-2 cursor-pointer h-14 p-5";
@@ -523,6 +548,14 @@ document.getElementById('activitie-sistema-de-produccion').addEventListener('cli
         document.getElementById('get-title').innerHTML = element.title
         document.getElementById('get-description').innerHTML = element.description
         document.getElementById('get-time').innerHTML = element.time
+    })
+})
+
+document.getElementById("section-exit").addEventListener("click", ()=> {
+    let modalExit = document.getElementById("box-exit");
+    modalExit.showModal();
+    document.getElementById("exit").addEventListener("click", ()=> {
+        location.reload();
     })
 })
 
